Updated to use Connext DDS Java API
Removed code and files that uses the Connext DDS C++ API via JNI, and
modified the code to use the Connext DDS Java API.

--- a/ShapesDemo/res/xml/settings.xml
+++ b/ShapesDemo/res/xml/settings.xml
@@ -29,5 +29,8 @@
                 android:inputType="phone" 
                 android:key="peerList" 
                 android:persistent="true" />
+         <com.rti.android.shapesdemo.util.DeviceIpAddressDisplay 
+		        android:title="Device IP Address:"
+		        android:key="device_ip_address" />
 
  </PreferenceScreen>
